--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Matematika: Math tests app",
   "icons": [
     {
-      "src": "calc_ico.png",
+      "src": "favicon.ico",
       "sizes": "256x256 128x128 64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
