--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "matematika",
   "version": "2.0.1",
+  "homepage": "https://DavidSili.github.io/matematika",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.0",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.49.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +38,6 @@
     ]
   },
   "devDependencies": {
-    "react-icons": "^4.3.1"
+    "gh-pages": "^3.2.3"
   }
 }
